[metadata]
name = f3dasm_simulate
version = file: VERSION
author = Martin van der Schelling
author_email = M.P.vanderSchelling@tudelft.nl
description = f3dasm_simulate: Simulation extension for f3dasm
long_description = file: README.md
long_description_content_type = text/markdown
keywords = keyword1, keyword2, keyword3
url = https://github.com/bessagroup/f3dasm_simulate
license = BSD-3-Clause License
license_files = file: LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >=3.8
install_requires = file: requirements.txt


[options.packages.find]
where=src